--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  background-color: #101419;
+}
 
-html{
-    background-color: #101419;
+.alternate::-webkit-scrollbar {
+  width: 0px;
+}
+
+@layer components {
+  .overlay::-webkit-scrollbar {
+    width: 5px; /* width of the entire scrollbar */
+  }
+
+  .overlay::-webkit-scrollbar-thumb {
+    background-color: #1d1d1f; /* color of the scroll thumb */
+    border-radius: 20px; /* roundness of the scroll thumb */
+  }
+  .overlay::-webkit-scrollbar-thumb:hover {
+    background-color: #111112; /* color of the scroll thumb */
+    border-radius: 20px; /* roundness of the scroll thumb */
+  }
 }
